# rag_system

./: .env.example  .gitignore  EvalRAG.md  LICENSE  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: ask.py  compare.py  eval_routes.py  ingest.py  traces.py
backend/app/eval/: human_ratings.py  judge.py  metrics.py  regression.py
backend/app/prompts/: __init__.py  default.md
backend/app/rag/: embed.py  generate.py  ingest.py  rerank.py  retrieve.py  store.py
backend/app/rag/providers/: __init__.py  anthropic_provider.py  base.py  local.py  openai_provider.py
backend/app/schemas/: __init__.py
backend/app/tracing/: __init__.py  wandb_tracer.py
backend/tests/: test_smoke.py
data/docs/: evaluation_metrics.md  observability_wandb.md  rag_overview.md  reranking.md  retrieval_bm25.md  structured_outputs.md
data/golden/: golden_v1.jsonl
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Icons.tsx
frontend/src/pages/: Ask.tsx  Compare.tsx  Eval.tsx  Ingest.tsx  Regressions.tsx
infra/: docker-compose.yml
scripts/: ingest.py  run_eval.py
